# tesi_marghe_2

./: pyproject.toml
data/: 2025-06-28 1119_dati_multicentro.xlsx  correlazioni.xlsx  results.xlsx  ~$results.xlsx
src/tesi_marghe/: 1_analisi_descrittiva.py  2_analisi_multivariata.py  __init__.py
src/tesi_marghe/utils/: log_reg.py  polars_utils.py  ttests_utils.py  waterfall.py
